# fastapi-vue-starter

./: .env.local  .gitignore  Makefile  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: main.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue
frontend/src/router/: index.js
frontend/src/views/: BackendView.vue
